--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -1,4 +1,4 @@
-name: IBM Cloud Auto Restart         
+name: IBM Cloud Auto Restart  223366       
 
 on:
   push:
@@ -26,7 +26,7 @@ jobs:
         ./IBM_Cloud_CLI/ibmcloud login <<EOF
         $IBM_ACCOUNT
         $REGION_NUM
-        no
+        yes
         EOF
     - name: Target IBM Cloud
       env:
